no leftbar, friends, helpers, viewers, boolean on doc_edit

--- a/parts/client/fields.jade
+++ b/parts/client/fields.jade
@@ -655,7 +655,7 @@ template(name='boolean_edit')
         //- .ui.compact.button.toggle_boolean(class=boolean_toggle_class)
         if icon
             +icon name=icon cl='ui avatar image'
-        .inline.f12
+        .inline
             //- if field_value
             //-     i.checkmark.icon
             if label
