--- a/parts/blocks.jade
+++ b/parts/blocks.jade
@@ -54,8 +54,7 @@ template(name='user_button')
 
 
 template(name='print_this')
-    .ui.icon.basic.button.print_this
-        i.orange.code.icon
+    i.code.link.icon.print_this
 
 template(name='session_boolean_toggle')
     .ui.compact.button.toggle_session_key(class=calculated_class)
@@ -130,7 +129,7 @@ template(name='viewing')
         i.eye.icon
     .ui.grey.inline.header 
         |viewers
-    each read_ids
+    each viewer_ids
         +user_info
 
 
