--- a/parts/client/nav.jade
+++ b/parts/client/nav.jade
@@ -100,7 +100,10 @@ template(name='right_sidebar')
         a.item.toggle_rightbar.no_blink(href="/u/#{currentUser.username}/tips" class="{{isActiveRoute 'user_tips'}}")
             | #{_amount} tips
             i.donate.icon
-        a.item.toggle_rightbar.no_blink(href="/u/#{currentUser.username}/debits" class="{{isActiveRoute 'user_sent'}}")
+        a.item.toggle_rightbar.no_blink(href="/u/#{currentUser.username}/friends" class="{{isActiveRoute 'user_friends'}}")
+            | friends
+            i.users.icon
+        a.item.toggle_rightbar.no_blink(href="/u/#{currentUser.username}/sent" class="{{isActiveRoute 'user_sent'}}")
             | #{currentUser.total_debit_amount}p sent
             i.chevron.up.icon
         .ui.divider
@@ -118,82 +121,3 @@ template(name='right_sidebar')
                 i.sign.out.icon
 
 
-
-template(name='left_sidebar')
-    .ui.left.sidebar.vertical.borderless.inverted.menu
-        // a.item.toggle_sidebar.no_blink(href="/" class="{{isActiveRoute '/'}}")
-        //     img.ui.avatar.compact.image(src="{{c.url 'one_logo' height=200 width=200 gravity='face' crop='fill'}}")
-        //     |One
-        // a.item.set_member.toggle_sidebar.no_blink(href="/m/member" class="{{isActivePath 'm/member'}}" title='players')
-        a.item.set_member.toggle_sidebar.no_blink(href="/users" class="{{isActivePath 'users'}}" title='users')
-            i.users.icon
-            | users
-        a.item.toggle_sidebar.no_blink(href="/reddit" class="{{isActivePath '/reddit'}}")
-            i.reddit.icon
-            |reddit
-        a.item.toggle_sidebar.no_blink(href="/stack" class="{{isActivePath '/stack'}}")
-            i.stack.exchange.icon
-            |stack exchange
-        a.item.toggle_sidebar.no_blink(href="/questions" class="{{isActivePath '/questions'}}")
-            i.question.icon
-            |questions
-        a.item.toggle_sidebar.no_blink(href="/m/offer" class="{{isActivePath '/m/offer'}}")
-            i.hand.holding.heart.icon
-            |offers
-        a.item.toggle_sidebar.no_blink.set_post(href="/m/post" class="{{isActivePath '/m/post'}}")
-            i.newspaper.icon
-            |news
-        a.item.toggle_sidebar.no_blink(href="/m/collective" class="{{isActivePath 'requests'}}")
-            i.users.icon
-            |collectives
-        a.item.toggle_sidebar.no_blink.set_bug(href="/m/bug" class="{{isActivePath '/m/bug'}}")
-            i.bug.icon
-            |bugs
-        a.icon.item.toggle_sidebar.no_blink.set_photo(href="/m/photo" class="{{isActivePath '/m/photo'}}" title='photos')
-            i.picture.icon
-            |photos  
-        a.icon.item.toggle_sidebar.no_blink.set_expense(href="/m/expense" class="{{isActivePath '/m/expense'}}" title='expenses')
-            i.dollar.icon
-            |expenses            
-        // a.item.toggle_sidebar.no_blink.set_rental(href="/m/rental" class="{{isActivePath regex='rentals'}}")
-        //     i.clock.icon
-        //     |rentals
-        // if has_badge 'facilitator'
-        // a.item.toggle_sidebar.no_blink(href="/chat" class="{{isActivePath '/chat'}}" title='chat') 
-        //     |chat
-        //     i.chat.icon
-        // if is_eric
-        //     a.icon.item.toggle_dev.toggle_sidebar.no_blink
-        //         |toggle dev
-        //         if is_dev
-        //             i.code.blue.icon
-        //         else
-        //             i.code.icon
-        if is_in_admin
-            a.icon.item.toggle_admin.toggle_sidebar.no_blink
-                |toggle admin
-                if is_admin
-                    i.shield.blue.icon
-                else
-                    i.shield.icon
-            
-        if is_admin
-            // a.item.toggle_sidebar.no_blink.set_badge(href="/m/badge" class="{{isActivePath 'badges'}}")
-            //     i.certificate.blue.icon
-            //     | badges
-            // a.item.toggle_sidebar.no_blink.set_debit(href="/m/debit" class="{{isActivePath regex='rentals'}}")
-            //     i.gift.blue.icon
-            //     |gifts
-            .divider
-            // a.item.toggle_sidebar.no_blink.set_project(href="/m/project" class="{{isActivePath regex='projects'}}")
-            //     i.tasks.blue.icon
-            //     | projects
-            // a.item.toggle_sidebar.no_blink(href="/m/room" class="{{isActiveRoute 'requests'}}")
-            //     i.building.blue.icon
-            //     |rooms
-            a.blue.item.set_model.toggle_sidebar.no_blink(href="/m/model" class="{{isActivePath '/m/model'}}")
-                |admin
-                i.database.blue.icon
-            a.item.set_user.toggle_sidebar.no_blink(href="/m/user" class="{{isActiveRoute '/m/user'}}")
-                i.blue.users.icon
-                | all users
