--- a/parts/client/post.jade
+++ b/parts/client/post.jade
@@ -1,9 +1,9 @@
 template(name='post_view')
     with current_doc
-        .ui.stackable.padded.grid
+        .ui.stackable.grid
             .row 
                 .twelve.wide.column.scrolling
-                    .ui.header #{title}
+                    .ui.center.aligned.header #{title}
                     if image_link
                         +image_link_view key='image_link' direct=true
                     if image_id
@@ -13,7 +13,7 @@ template(name='post_view')
                             +youtube_view key='youtube_id' label='youtube id' direct=true
                     if raw 
                         |!{raw}
-                    .say_this.say_body
+                    .say_this.say_body.f11
                         |!{content}
                     div 
                     .spacer
@@ -21,7 +21,7 @@ template(name='post_view')
                     +comments
                     div
                 .four.wide.column.scrolling
-                    a.ui.large.icon.basic.circular.button(href="/")
+                    a.ui.large.icon.basic.button(href="/")
                         i.chevron.left.large.icon
                     | #{views} views
                     +array_edit key='tags' label='tags' direct=true
@@ -31,7 +31,7 @@ template(name='post_view')
                     +array_edit key='time_tags' label='time tags' icon='clock' direct=true
                     +array_edit key='location_tags' label='location tags' icon='marker' direct=true
                     if can_edit 
-                        a.ui.circular.icon.basic.button(href="/p/#{_id}/edit")
+                        a.ui.icon.basic.button(href="/p/#{_id}/edit")
                             i.big.pencil.icon
                     i.large.eye.icon
                     each viewer_ids
@@ -53,15 +53,15 @@ template(name='post_view')
                     
 template(name='post_edit')
     with current_doc
-        .ui.stackable.padded.grid
+        .ui.stackable.grid
             .row
                 .four.wide.column.scrolling
-                    a.ui.icon.circular.basic.big.button(href="/p/#{_id}/view" title='save')
+                    a.ui.icon.basic.big.button(href="/p/#{_id}/view" title='save')
                         i.checkmark.big.green.icon
                     .ui.inline.header 
                         i.pencil.icon
-                        |edit post
-                    i.large.link.red.remove.icon.delete_post
+                        | post
+                    i.large.link.remove.icon.delete_post
                     +image_edit key='image_id' label='image' direct=true
                     div 
                     +array_edit key='tags' label='tags' direct=true
