--- a/parts/users.jade
+++ b/parts/users.jade
@@ -3,13 +3,21 @@ template(name='users')
         .four.wide.column
             +user_cloud
         .twelve.wide.column
+            +session_set key='view_users' value='grid' icon='th' 
+            +session_set key='view_users' value='list' icon='list'
             .scrolling
-                each users
-                    +user_item
-                    div
+                if session_is 'view_users' 'grid'
+                    .ui.stackable.three.cards
+                        each users
+                            +user_card
+                else
+                    each users
+                        +user_item
+                        div
 
-
-
+template(name='session_set')
+    .ui.icon.button.set_value(class=session_set_class)
+        i.icon(class=icon)
 
 template(name='user_cloud')
     i.shield.blue.large.icon
@@ -36,26 +44,9 @@ template(name='user_cloud')
 
 
 
-template(name='member_item')
-    .item
-        a.zoom.pointer.mobile.hidden(href="/user/#{username}")
-            img.ui.avatar.image(src="{{c.url profile_image_id height=500 width=500 gravity='face' crop='fill'}}") 
-
-            a.ui.inline.header.pointer(href="/user/#{username}" style="color:#{theme_color};")
-                |#{name}
-                //- |#{username}
-            .ui.inline.small.header(style="color:#{current_user.theme_color};") #{points}pts
-            .ui.large.basic.label(style="color:#{current_user.theme_color};" title='one ratio') {{to_percent one_ratio}}%
-            .ui.large.basic.label(style="color:#{current_user.theme_color};") #{flow_volume} vol
-            // each levels
-            //     .ui.basic.small.label(style="color:#{theme_color};") #{this}
-            // unless is_this_user
-            //     i.red.gift.pointer.debit.big.icon
-            //     i.teal.concierge.bell.pointer.request.big.icon
-            //     i.blue.chat.pointer.message.big.disabled.icon
 template(name='user_item')
     .item
-        a.zoom.pointer.mobile.hidden(href="/user/#{username}")
+        a.zoom.pointer.blink(href="/user/#{username}")
             img.ui.avatar.image(src="{{c.url profile_image_id height=500 width=500 gravity='face' crop='fill'}}") 
 
             a.ui.inline.header.pointer(href="/user/#{username}" style="color:#{theme_color};")
@@ -64,17 +55,17 @@ template(name='user_item')
             .ui.inline.small.header(style="color:#{current_user.theme_color};") #{points}p
             // .ui.large.basic.label(style="color:#{current_user.theme_color};" title='one ratio') {{to_percent one_ratio}}%
             // .ui.large.basic.label(style="color:#{current_user.theme_color};") #{flow_volume} vol
-            // each levels
-            //     .ui.basic.small.label(style="color:#{theme_color};") #{this}
-            // unless is_this_user
-            //     i.red.gift.pointer.debit.big.icon
-            //     i.teal.concierge.bell.pointer.request.big.icon
-            //     i.blue.chat.pointer.message.big.disabled.icon
+            each tags
+                .ui.basic.small.label(style="color:#{theme_color};") #{this}
+            unless is_this_user
+                i.red.gift.pointer.debit.big.icon
+                i.teal.concierge.bell.pointer.request.big.icon
+                i.blue.chat.pointer.message.big.disabled.icon
         
-template(name='member_card')
+template(name='user_card')
     .card.rounded.calc_points
         img.ui.image.mobile.only(class=currentUser.invert_class src="{{c.url profile_image_id width=400 height=300 crop='fill'}}")    
-        a.zoom.pointer.mobile.hidden(href="/user/#{username}")
+        a.zoom.pointer.mobile.hidden.blink(href="/user/#{username}")
             unless avatar_image_id
                 img.ui.image(class=currentUser.invert_class src="{{c.url profile_image_id width=400 height=300 crop='fill'}}")    
             if avatar_image_id
@@ -85,7 +76,7 @@ template(name='member_card')
                         img(class=currentUser.invert_class src="{{c.url avatar_image_id height=500 width=500 gravity='face' crop='fill'}}") 
 
         .content
-            a.ui.inline.header.pointer(href="/user/#{username}" style="color:#{theme_color};")
+            a.ui.inline.header.pointer.blink(href="/user/#{username}" style="color:#{theme_color};")
                 if spirit_animal
                     +icolor name=spirit_animal cl='ui avatar image'
                 |#{name}
@@ -120,32 +111,6 @@ template(name='member_card')
             //     i.teal.concierge.bell.pointer.request.big.icon
             //     i.blue.chat.pointer.message.big.disabled.icon
                     
-template(name='user_card')
-    .card.rounded.pointer.calc_points(class=theme_color)
-        a(href="/user/#{username}")
-            img.ui.image(src="{{c.url profile_image_id width=400 height=300 crop='fill'}}")    
-        .content
-            a.ui.header(href="/user/#{username}" class=theme_color) 
-                |#{name}
-                //- |#{username}
-                if spirit_animal
-                    +icolor name=spirit_animal cl='ui avatar image'
-            // each levels
-            //     .ui.label #{this}
-            // strong #{credit_count} credits
-            // strong #{credit_count}/
-            // strong #{debit_count}
-            // strong {{credit_ratio}}
-            // span ##{global_debit_count_rank}
-            // span ##{global_credit_count_rank}
-            
-            .ui.small.inline.header #{points}pts
-            i.line.chart.icon(title='levels')
-            each levels
-                .ui.basic.small.label(style="color:#{theme_color};") #{this}
-            i.shield.icon(title='roles')
-            each roles
-                .ui.basic.small.label(style="color:#{theme_color};") #{this}
                     
 
 template(name='addtoset_user')
