init subscribe and join, rename recipient with target

--- a/parts/client/message.jade
+++ b/parts/client/message.jade
@@ -69,7 +69,7 @@ template(name='message_edit')
                                 .ui.small.grey.inline.header #{points}
                         unless recipient
                             .ui.divider
-                            +single_user_edit key='recipient_id' label='search member' icon='user plus' direct=true
+                            +single_user_edit key='target_id' label='search member' icon='user plus' direct=true
 
                             // i.large.user.plus.icon
                             // // .ui.icon.input
