--- a/parts/debit_edit.jade
+++ b/parts/debit_edit.jade
@@ -22,7 +22,7 @@ template(name='debit_edit')
                         unless recipient
                             .ui.divider
                             // i.large.user.plus.icon
-                            +single_user_edit key='recipient_id' label='search member' icon='user plus' direct=true
+                            +single_user_edit key='target_id' label='search member' icon='user plus' direct=true
                             // .ui.icon.input
                             //     i.search.icon
                             //     input.search_username(type='text' placeholder='username')
